package Chapter01;

public interface Aggregate {
    public abstract Iterator iterator();
}
