package Chapter01;

public interface Iterator {
    public abstract boolean hasNext();
    public abstract Object next();
}
